added new header file for personalized menu, modified the existing html with little things

--- a/templates/settings.html
+++ b/templates/settings.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
+  {% include 'header.html' %}
   <div class="container">
     <h1>Setări SmartRoom</h1>
     {% with messages = get_flashed_messages(category_filter=["success"]) %}
