--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -15,32 +15,7 @@
 
 <!--  2. BODY – conținutul vizibil în pagină -->
 <body>
-    <!-- Header + Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light">
-    <div class="container-fluid">
-      <a class="navbar-brand fw-bold" href="#">SmartRoom</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link active" href="/">Dashboard</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/charts">Charts</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/about">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/settings">Settings</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
+  {% include 'header.html' %}
   <!--  3. Container cu carduri pentru senzori -->
   <div class="row" id="cards">
     <!-- Card Temperatură -->
@@ -138,6 +113,8 @@
 
     fetchLatestData();
     setInterval(fetchLatestData, 5000);
+    
   </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
