stilizat butoanele de navigare intre chart uri versiunea 5

--- a/templates/details.html
+++ b/templates/details.html
@@ -18,7 +18,7 @@
     <h2>📊 Evoluție – {{ sensor_name[sensor] | capitalize }}</h2>
     <p>Urmărește valorile înregistrate în timp pentru senzorul de <strong>{{ sensor_name[sensor] }}</strong>.</p>
 
-    <div class="position-relative">
+    <div class="chart-wrapper my-4 position-relative">
         <button class="nav-arrow nav-left" onclick="goToPrevSensor()">&lt;</button>
 
         <div class="chart-container my-4">
