--- a/templates/details.html
+++ b/templates/details.html
@@ -18,11 +18,9 @@
     <h2>📊 Evoluție – {{ sensor_name[sensor] | capitalize }}</h2>
     <p>Urmărește valorile înregistrate în timp pentru senzorul de <strong>{{ sensor_name[sensor] }}</strong>.</p>
 
-    <div class="container-fluid px-2">
-        <div class="card shadow-sm border-0">
-            <div class="card-body p-2">
-            <canvas id="sensorChart" style="width:100%; height:50vh;"></canvas>
-            </div>
+    <div class="container-fluid px-0">
+        <div class="p-0">
+            <canvas id="sensorChart" style="width:100% !important; min-height: 65vh !important;"></canvas>
         </div>
     </div>
 
