--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,7 +1,7 @@
 /* ========== SETARI GLOBALE ========== */
 body {
-  background-color: #f8f9fa;
-  padding: 2rem;
+  background-color: #f0f4f8;
+  padding: 5px;
   padding-top: 80px;
   font-family: 'Poppins', sans-serif;
 }
@@ -106,7 +106,7 @@ p {
   box-shadow: 0 4px 10px rgba(0,0,0,0.1);
   width: 100%;
   max-width: 100%;
-  height: 60vh;
+  height: 65vh;
   margin: 0 auto;
   position: relative;
 }
