--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,6 +1,6 @@
 /* ========== SETARI GLOBALE ========== */
 body {
-  background-color: #f0f4f8;
+  background-color: #dee0e3;
   padding: 5px;
   padding-top: 80px;
   font-family: 'Poppins', sans-serif;
