--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,6 +1,6 @@
 /* ========== SETARI GLOBALE ========== */
 body {
-  background-color: #dee0e3;
+  background-color: #b6c1ba;
   padding: 5px;
   padding-top: 80px;
   font-family: 'Poppins', sans-serif;
@@ -58,6 +58,8 @@ p {
   border-radius: 1rem;
   box-shadow: 0 4px 8px rgba(0,0,0,0.1);
   min-height: 200px;
+  padding-left: 10px;
+  padding-right: 10px;
   cursor: pointer;
   transition: transform 0.2s ease-in-out;
 }
