--- a/static/css/sidebar.css
+++ b/static/css/sidebar.css
@@ -62,27 +62,22 @@
 /* RESPONSIVE pentru ecrane mici */
 @media (max-width: 768px) {
   .sidebar {
-    width: 100%;
-    height: auto;
-    position: relative;
-  }
-
-  .sidebar ul {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-  }
-
-  .sidebar a {
-    justify-content: center;
-    padding: 0.5rem;
-  }
-
-  .sidebar a span {
     display: none;
   }
+  .offcanvas ul.nav {
+    padding-left: 0;
+  }
 
-  .content {
-    margin-left: 0 !important;
+  .offcanvas .nav-link {
+    padding: 0.75rem 1rem;
+    color: #212529;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+  }
+
+  .offcanvas .nav-link.active {
+    background-color: #f1f1f1;
+    font-weight: 600;
   }
 }
