--- a/templates/base.html
+++ b/templates/base.html
@@ -13,16 +13,17 @@
 <body>
 
   {% include 'sidebar.html' %}
-  {% include 'topbar.html' %}
-
-  <div class="content" style="margin-left: 60px; padding: 1rem;">
-    {% block content %}
-    <!--continut pagina-->
-    {% endblock %}
+  <div class="main">
+    {% include 'topbar.html' %}
+    <div class="content" style="margin-left: 60px; padding: 1rem;">
+        {% block content %}
+        <!--continut pagina-->
+        {% endblock %}
+    </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  
+
   <script>
   const sidebar = document.getElementById("smartSidebar");
   const toggle = document.getElementById("sidebarToggle");
