topbar and sidebar improved

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
   {% include 'sidebar.html' %}
   <div class="main">
     {% include 'topbar.html' %}
-    <div class="content">
+    <div class="content" style="margin-left: 60px; padding: 1rem;">
         {% block content %}
         <!--continut pagina-->
         {% endblock %}
