--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,4 +1,4 @@
-<div class="sidebar">
+<div id="smartSidebar" class="sidebar">
   <ul>
     <li>
       <a href="/dashboard" class="nav-link {% if request.path == '/dashboard' %}active{% endif %}">
