--- a/static/css/sidebar.css
+++ b/static/css/sidebar.css
@@ -70,6 +70,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 0 1rem;
+  margin-left: 60px;
 }
 
 /* RESPONSIVE pentru ecrane mici */
