--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -11,14 +11,13 @@
   </div>
 
   <!--  3. Container cu carduri pentru senzori -->
-  <div class="row" id="cards">
+  <div class="cards-container d-flex flex-wrap justify-content-center gap-3">
     <!-- Card Temperatură -->
-    <div class="col-md-3">
       <div class="card p-3" onclick="window.location.href='/details/temperature'">
         <h5>🌡 Temperatură</h5>
         <p id="temp">--</p>
       </div>
-    </div>
+  </div>
 
     <!-- Card Umiditate -->
     <div class="col-md-3">
